# Protein-Swap

./: .gitignore  README.md
Protein Swap/Aptos/: .env.example  README.md  deployment-info.json  package.json
Protein Swap/Eth/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
Protein Swap/Near/Token-Contract/: .env.example  1.md  Cargo.toml  README.md
Protein Swap/Near/Token-Contract/script/: README.md  deploy-token.js  env.example  mint.js
Protein Swap/Near/Token-Contract/src/: lib.rs
Protein Swap/stellar/escrow-contract/contracts/hello-world/: Cargo.toml
Protein Swap/stellar/escrow-contract/contracts/hello-world/src/: lib.rs
Protein Swap/stellar/escrow-contract/contracts/hello-world/test_snapshots/test/: test_cancel_completed_escrow.1.json  test_cancel_escrow_not_found.1.json  test_cancel_escrow_success.1.json  test_cancel_escrow_wrong_caller.1.json  test_complete_atomic_swap_flow.1.json  test_create_escrow_success.1.json  test_different_owners_same_order_id.1.json  test_escrow_data_integrity.1.json  test_escrow_lifecycle_cancelled.1.json  test_escrow_lifecycle_completed.1.json  test_escrow_state_transitions.1.json  test_hash_verification.1.json  test_multiple_escrows_same_owner.1.json  test_operations_on_cancelled_escrow.1.json  test_operations_on_completed_escrow.1.json  test_reveal_secret_success.1.json  test_reveal_secret_timelock_expired.1.json  test_reveal_secret_wrong_hash.1.json  test_timelock_behavior.1.json  test_timelock_cancellation_flow.1.json  test_timestamp_and_hash_utilities.1.json  test_utility_functions.1.json
(+70 files in other folders)
